<resources>
    <string name="app_name">Android HW 0023</string>
    <!-- Strings related to login -->
    <string name="prompt_name">Name</string>
    <string name="prompt_surname">Surname</string>
    <string name="prompt_birth_date">Birth Date</string>
    <string name="prompt_birth_place">Birth Place</string>
    <string name="prompt_tcid">TC Identification Number</string>
    <string name="prompt_photo">Birth Place</string>
    <string name="action_save">Save</string>


    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string-array name="cities_array">
        <item>Istanbul</item>
        <item>Eskişehir</item>
        <item>Ankara</item>
        <item>Adana</item>
        <item>İzmir</item>
        <item>Tekirdağ</item>
    </string-array>

</resources>
